<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstNXTProject</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">Connect</string>
    <string name="close">Disconnect</string>
    <string name="bluetoothDesc">Bluetooth Icon</string>
    <string name="nxtConnecting">Attemping to connect to NXT</string>
    <string name="nxtDisconnected">Not connected to NXT</string>
    <string name="nxtConnected">Connected to NXT\n </string>
    <string name="defaultBatteryStatus">Battery level:</string>
    <string name="sing">Sing!</string>
    <string name="none">""</string>
    <string name="drive">Drive power:</string>
    
    
    <!-- 
	Taken from:
	http://www.javacodegeeks.com/2012/08/android-voice-recognition-tutorial.html
 	-->	
    <string name="btSpeak">Speak</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_voice_recognition">Voice Recognition</string>
    <string name="tvTextMatches">Text Matches</string>
    <string name="sNoOfMatches">No of Matches</string>
    <string name="etSearchHint">Speech hint here</string>
    <string-array name="saNoOfMatches">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="aboutapp">About App</string>
    <string name="preference">Preference</string>
    <string name="Pref1">Polling Settings</string>
    <string name="Pref2">Servo Setting</string>
    <string name="pref_cb1_title">Battery Level</string>
    <string name="pref_cb2_title">Default Speed</string>
    <string name="pref_list_title">Time Interval</string>
    <string name="version">Version ID: 1.0.3</string>
    <string name="prodId">Product ID:  000-123-528-XCA1</string>
    <string name="copyright">copyright © 2014 MANEIt Software, Inc.</string>
    <string name="accel_instructions_str">Hold to Enable Accelerometer</string>
    <string name="drive_arrow_label">Drive</string>
    <string name="aux_arrow_label">Aux</string>
    <string name="poll_switch_label">Poll</string>
    <string name="stop_switch_label">Stop</string>
    <string name="reset_sensors">Reset Sensors</string>
    <string name="reset_servos">Reset Servos</string>

</resources>
