<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connect_view_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/connect" />

    <Button
        android:id="@+id/disconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/connectButton"
        android:layout_below="@+id/connectButton"
        android:layout_marginTop="19dp"
        android:text="@string/close" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disconnectButton"
        android:layout_marginTop="118dp"
        android:layout_toRightOf="@+id/connectButton"
        android:text="TextView" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginBottom="18dp"
        android:text="@string/nxtDisconnected" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/disconnectButton"
        android:layout_below="@+id/disconnectButton"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/bluetooth" />

</RelativeLayout>
