<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drive_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drive"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDrive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="@dimen/arrow_button_margin"
        android:paddingTop="@dimen/arrow_button_margin" >

        <Button
            android:id="@+id/lft_btn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/arrow_left_image_selector" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/fwd_btn"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/arrow_up_image_selector" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/control_label_margin"
                android:text="@string/drive_arrow_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bwd_btn"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/arrow_down_image_selector" />
        </LinearLayout>

        <Button
            android:id="@+id/rgt_btn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/arrow_right_image_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/control_label_margin"
            android:text="Aux power:"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/third_lft_btn"
            android:layout_width="90dp"
            android:layout_height="72dp"
            android:background="@drawable/backward" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:gravity="center_vertical|center_horizontal"
            android:padding="@dimen/control_label_margin"
            android:text="@string/aux_arrow_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/third_rgt_btn"
            android:layout_width="90dp"
            android:layout_height="72dp"
            android:background="@drawable/forward" />
    </LinearLayout>

    <TextView
        android:id="@+id/list_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bluetooth device is connected or whatever"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>